<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_key_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <cz.mts.base.views.MyAppBarLayout
        android:id="@+id/auth_key_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/auth_key_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:menu="@menu/menu_auth_key"
            app:title="@string/call_recording_title"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </cz.mts.base.views.MyAppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/auth_key_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/auth_key_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 1. Dlouhý informační text -->
            <RelativeLayout
                android:id="@+id/auth_key_info_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <cz.mts.base.views.MyTextView
                    android:id="@+id/auth_key_info_text"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textStyle="normal"
                    tools:text="" />

            </RelativeLayout>

            <!-- 2. Souhlasový switch – stejný styl jako v Settings -->
            <RelativeLayout
                android:id="@+id/auth_key_agree_holder"
                style="@style/SettingsHolderSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <cz.mts.base.views.MyMaterialSwitch
                    android:id="@+id/auth_key_agree_switch"
                    style="@style/SettingsSwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/call_recording_agree" />

            </RelativeLayout>

<!-- 3. Editbox s klíčem – skrytý, dokud switch není zapnutý -->
<RelativeLayout
    android:id="@+id/auth_key_input_holder"
    style="@style/SettingsHolderTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <cz.mts.base.views.MyEditText
        android:id="@+id/auth_key_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/call_recording_key_hint"
        android:inputType="textVisiblePassword"
        android:textSize="@dimen/normal_text_size" />

</RelativeLayout>

<RelativeLayout
    android:id="@+id/auth_key_log_holder"
    style="@style/SettingsHolderTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <cz.mts.base.views.MyEditText
        android:id="@+id/auth_key_log_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:hint="log"
        android:inputType="textMultiLine|textNoSuggestions"
        android:minLines="10"
        android:textSize="@dimen/normal_text_size" />

</RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

<com.google.android.material.progressindicator.CircularProgressIndicator
    android:id="@+id/progress_indicator_settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:indeterminate="true"
    android:visibility="gone"
    app:trackCornerRadius="@dimen/small_margin" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>